添加JVM